--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -15,11 +15,12 @@
 
         <ImageView
             android:id="@+id/btn_back"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="91dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="-13dp"
+            android:layout_marginTop="5dp"
             android:clickable="true"
-            android:layout_marginLeft="-10dp"
-            app:srcCompat="@drawable/user" />
+            app:srcCompat="@drawable/backbtn" />
 
         <ImageView
             android:id="@+id/imageView2"
