--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,15 @@
     android:orientation="vertical"
     tools:context="com.example.user.salesapp.HomeAct">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:text="Select the category you interest" />
+
     <ListView
         android:id="@+id/home_cat"
         android:layout_width="match_parent"
